Fixed styling issue overflowing width.

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,5 @@
 /* ===== HEADER ===== */
+
 .header {
   background-color: rgb(16, 191, 124);
   color: white;
@@ -6,6 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 
 .logo {
