--- a/src/pages/SavedResultsPage/SavedResultsPage.module.css
+++ b/src/pages/SavedResultsPage/SavedResultsPage.module.css
@@ -7,9 +7,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
-.main > * {
+.main>* {
   width: 100%;
   max-width: 900px;
 }
