--- a/src/pages/SearchPages/SearchPageCompany/SearchPage.module.css
+++ b/src/pages/SearchPages/SearchPageCompany/SearchPage.module.css
@@ -18,6 +18,8 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  width: 100%;
+
 }
 
 /* ===== DASHBOARD CARD ===== */
