--- a/src/pages/SearchPages/SearchPageJob/SearchPage.module.css
+++ b/src/pages/SearchPages/SearchPageJob/SearchPage.module.css
@@ -7,7 +7,6 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  min-width: 100vw;
 }
 
 /* ===== MAIN ===== */
@@ -18,6 +17,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  width: 100%;
 }
 
 /* ===== DASHBOARD CARD ===== */
